--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
+        <title>RC:OS</title>
+        <link rel="stylesheet" type="text/css" href="shared.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <script src="/socket.io/socket.io.js"></script>
     <script>
@@ -10,7 +15,11 @@
     
     </script>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-        
+        <div class="container">
+            <img id="logo" alt="RC:OS banner" src="/Resources/rcos-banner.png"/>
+            <br>
+            <button>Join Game</button>
+        </div>
+
     </body>
 </html>
