--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -16,7 +16,7 @@
     </script>
     <body>
         <div class="container">
-            <img id="logo" alt="RC:OS banner" src="/Resources/rcos-banner.png"/>
+            <img id="logo" alt="RC:OS banner" src="Resources/rcos-banner.png"/>
             <br>
             <button>Join Game</button>
         </div>
