--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -15,11 +15,16 @@
     
     </script>
     <body>
-        <div class="container">
-            <img id="logo" alt="RC:OS banner" src="Resources/rcos-banner.png"/>
-            <br>
-            <button>Join Game</button>
+        <div id="container">
+            <img id="rightHearts" alt="Three hearts as decoration" src="Resources/hearts.png"/>
+            <div>
+                <img id="logo" alt="RC:OS banner" src="Resources/rcos-banner.png"/>
+                <br>
+                <button>Join Game</button>
+            </div>
+            <img id="leftHearts" alt="Three hearts as decoration" src="Resources/hearts.png"/>
         </div>
+
 
     </body>
 </html>
