Create frontend for Game Code Page
Created the frontend for the Game Code Page, where users can easily enter in the code without having to click on each individual input box. Linked the Home Page to the Game Code Page. Still need to implement functionality of checking whether entered code is valid and displaying error if invalid.

--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>RC:OS</title>
-        <link rel="stylesheet" type="text/css" href="shared.css">
-        <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="./shared.css">
+        <link rel="stylesheet" type="text/css" href="./index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -16,13 +16,13 @@
     </script>
     <body>
         <div id="container">
-            <img id="rightHearts" alt="Three hearts as decoration" src="Resources/hearts.png"/>
+            <img id="rightHearts" alt="Three hearts as decoration" src="./Resources/hearts.png"/>
             <div>
-                <img id="logo" alt="RC:OS banner" src="Resources/rcos-banner.png"/>
+                <img id="logo" alt="RC:OS banner" src="./Resources/rcos-banner.png"/>
                 <br>
-                <button>Join Game</button>
+                <button onclick="location.href='./lobbyCode'">Join Game</button>
             </div>
-            <img id="leftHearts" alt="Three hearts as decoration" src="Resources/hearts.png"/>
+            <img id="leftHearts" alt="Three hearts as decoration" src="./Resources/hearts.png"/>
         </div>
 
 
