Move all styling to CSS file

--- a/SocketIOServer/public/lobbyCode/index.html
+++ b/SocketIOServer/public/lobbyCode/index.html
@@ -23,7 +23,7 @@
     <h3>Please enter your game code</h3>
     <div>
         <form id="codeForm">
-            <div style="display: flex; justify-content: center; flex-direction: row; gap: 20px;">
+            <div id="codeGroup">
                 <input type="text" maxlength="1" class="code">
                 <input type="text" maxlength="1" class="code">
                 <input type="text" maxlength="1" class="code">
