Added the connection between the server and the client. Added the code name "submitCode" the provides the server the code inputed by the user. The server is also able to send a message back to the user

--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>RC:OS</title>
-        <link rel="stylesheet" type="text/css" href="/root/csci-4400-sdd-rcos/SocketIOServer/public/shared.css">
+        <link rel="stylesheet" type="text/css" href="./shared.css">
         <link rel="stylesheet" type="text/css" href="./index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
