--- a/SocketIOServer/public/lobbyCode/index.html
+++ b/SocketIOServer/public/lobbyCode/index.html
@@ -11,12 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
 </head>
-<script src="/socket.io/socket.io.js"></script>
-<script>
-    var socket = io();
-
-
-</script>
 <body>
 <div id="container">
     <h1>Game Code</h1>
@@ -35,8 +29,8 @@
         </form>
     </div>
 </div>
-
+<p id="response"></p>
+<script src="/socket.io/socket.io.js"></script>
 <script src="./index.js"></script>
-
 </body>
 </html>
