can upload pictures to website

--- a/SocketIOServer/public/profileCreation/profile_creation.html
+++ b/SocketIOServer/public/profileCreation/profile_creation.html
@@ -18,10 +18,10 @@
                 <div id="imageContainer">
                     <img src="../Resources/user-icon.png" alt="An icon representing a generic user." id="image" width="400px" height="300px">
                     <div id="buttons">
-                        <button type="button" id="libraryButton"><img src="../Resources/image-icon.png" alt="An image icon" width="68px"></button>
+                        <button type="button" id="libraryButton"><img src="../Resources/image-icon.png" alt="An image icon" width="68px" ></button>
                         <form>
                             <label for="upload" id="uploadLabel"><img src="../Resources/upload-icon.png" alt="An upload icon."></label>
-                            <input type="file" id="upload" hidden>
+                            <input type="file" id="upload" accept="image/*" hidden>
                         </form>
 
                     </div>
