Updated JS and CSS
Modified so that the player can continuously vote throughout the presentation and a confirmation message is displayed at the bottom of the page after each vote. The confirmation message fades out after 3 seconds. If a vote was submitted before the message disappears, the fade out animation restarts. Also moved all styling into CSS file.

--- a/SocketIOServer/public/voting/voting.html
+++ b/SocketIOServer/public/voting/voting.html
@@ -3,25 +3,10 @@
 <head>
     <title>RC:OS</title>
     <link rel="stylesheet" type="text/css" href="../shared.css">
+    <link rel="stylesheet" type="text/css" href="./voting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <style>
-        #container {
-            display: flex;
-            justify-content: center;
-            padding-top: 80px;
-        }
-        .votingButton {
-            border: 5px solid #D6202A;
-            border-radius: 36px;
-            padding: 20px;
-        }
-        .votingButton:hover {
-            transform: scale(1.1);
-        }
-    </style>
-
 </head>
 <body>
 <div id="container">
@@ -34,7 +19,7 @@
         </div>
     </div>
     <button id="submit" style="position: absolute; bottom: 50px; right: 80px;">Submit</button>
-    <h3 id="confirmation" style="display: none;">Vote submitted</h3>
+    <h3 id="confirmation" class="hidden">Vote submitted</h3>
 </div>
 <script src="voting.js"></script>
 
