--- a/SocketIOServer/public/presenting/presenting.html
+++ b/SocketIOServer/public/presenting/presenting.html
@@ -8,12 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <style>
         #container {
-            width: 100vw;
             height: 100vh;
             display: flex;
-            align-content: center;
             justify-content: center;
+            align-content: center;
             flex-wrap: wrap;
+            flex-direction: column;
+            gap: 80px;
         }
     </style>
 </head>
@@ -21,6 +22,7 @@
 <body>
 <div id="container">
     <h1>You're presenting!<br>Good luck on your date!</h1>
+    <button id="next">Next</button>
 </div>
 
 
