--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -9,39 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div id="container">
-    <div id="header">
-        <p id="timer">1:00</p>
-        <img id="profilePic" src="../Resources/user-icon.png" alt="Your profile picture." height="75px">
+    <div id="container">
+        <div id="header">
+            <p id="timer"></p>
+            <img id="profilePic" src="../Resources/user-icon.png" alt="Your profile picture." height="75px">
+        </div>
+        <div id="questionContainer"></div>
+        <div id="answers"></div>
+        <button id="next">Next</button>
+        <div class="timerBar" data-style="smooth">
+            <div></div>
+        </div>
     </div>
-    <h1>Question</h1>
-    <h4 id="prompt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</h4>
-    <div id="answers">
-        <button class="answerCard" data-selected="false">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </button>
-        <button class="answerCard" data-selected="false">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </button>
-        <button class="answerCard" data-selected="false">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </button>
-        <button class="answerCard" data-selected="false">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </button>
-        <button class="answerCard" data-selected="false">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-        </button>
-    </div>
-    <button id="next">Next</button>
-    <div class="timerBar" data-style="smooth">
-        <div></div>
-    </div>
-
+    <script src="/socket.io/socket.io.js"></script>
     <script src="prompt.js"></script>
-
-</div>
-
 
 </body>
 </html>
