--- a/SocketIOServer/public/voting/voting.html
+++ b/SocketIOServer/public/voting/voting.html
@@ -21,7 +21,7 @@
     <button id="submit" style="position: absolute; bottom: 50px; right: 80px;">Submit</button>
     <h3 id="confirmation" class="hidden">Vote submitted</h3>
 </div>
+<script src="/socket.io/socket.io.js"></script>
 <script src="voting.js"></script>
-
 </body>
 </html>
