--- a/SocketIOServer/public/presenting/presenting.html
+++ b/SocketIOServer/public/presenting/presenting.html
@@ -25,6 +25,8 @@
     <button id="next">Next</button>
 </div>
 
+<script src="/socket.io/socket.io.js"></script>
+<script src="presenting.js"></script>
 
 </body>
 </html>
