Revert "Voting handling."

--- a/SocketIOServer/public/voting/voting.html
+++ b/SocketIOServer/public/voting/voting.html
@@ -18,6 +18,8 @@
             <button id="dislike" class="votingButton" data-selected="false"><img src="../Resources/thumbs-down.png" alt="Downwards thumb for dislike." width="160px"></button>
         </div>
     </div>
+    <button id="submit" style="position: absolute; bottom: 50px; right: 80px;">Submit</button>
+    <h3 id="confirmation" class="hidden">Vote submitted</h3>
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="voting.js"></script>
