Added post-game functionality.

--- a/SocketIOServer/public/postGame/postGame.html
+++ b/SocketIOServer/public/postGame/postGame.html
@@ -29,6 +29,9 @@
         <button id="rejoin">Rejoin Game</button>
         <button id="quit">Quit</button>
     </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="postGame.js"></script>
 </div>
 
 
