--- a/SocketIOServer/public/waitingForPlayers/waiting.html
+++ b/SocketIOServer/public/waitingForPlayers/waiting.html
@@ -36,8 +36,7 @@
         <h3>Waiting for other players...</h3>
     </div>
 </div>
-
-
+<script src="/socket.io/socket.io.js"></script>
 <script src="waiting.js"></script>
 </body>
 </html>
