--- a/SocketIOServer/public/waitingGraph/waitingGraph.html
+++ b/SocketIOServer/public/waitingGraph/waitingGraph.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>RC:OS</title>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="../shared.css">
     <link rel="stylesheet" type="text/css" href="./waitingGraph.css">
 </head>
