Make pages mobile friendly
Added necessary CSS modifications using media rule and moved some styling from HTML to CSS files. The media breakpoints are based on the Google Developer Tool settings, where Mobile L is 425px wide and Mobile S is 320px.
The design of the websites mostly stayed the same, except for the lobby page where if the phone is rotated horizontally the player names go sideways instead of vertically.

--- a/SocketIOServer/public/lobby/lobby.html
+++ b/SocketIOServer/public/lobby/lobby.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>RC:OS</title>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="../shared.css">
     <link rel="stylesheet" type="text/css" href="./lobby.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
