--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>RC:OS</title>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="../shared.css">
     <link rel="stylesheet" type="text/css" href="./prompt.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +23,5 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="prompt.js"></script>
-
 </body>
 </html>
