--- a/SocketIOServer/public/waitingForPlayers/waiting.html
+++ b/SocketIOServer/public/waitingForPlayers/waiting.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>RC:OS</title>
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="../shared.css">
+    <link rel="stylesheet" type="text/css" href="waiting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <style>
-        #container {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            align-items: flex-end;
-            flex-wrap: wrap;
-        }
-        img {
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            padding: 0 10px;
-        }
-    </style>
 </head>
 
 <body>
