Created textbox for user input
Hides the answer cards when the empty answer box is selected and replaces it with a textbox. There are two buttons, Go Back and Submit, where Go Back displays the answer cards again and Submit submits the user's inputted answer. Also commented out color changing functionality since selecting an answer would automatically submit it and users cannot change their answers.

--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -17,11 +17,18 @@
         </div>
         <div id="questionContainer"></div>
         <div id="answers"></div>
+        <form id="textboxForm">
+            <textarea id="textbox"></textarea>
+            <div id="buttons">
+                <button id="back">Go Back</button>
+                <button id="submit" type="submit">Submit</button>
+            </div>
+        </form>
         <div class="timerBar" data-style="smooth">
             <div></div>
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="prompt.js"></script>
+    <script src="./prompt.js"></script>
 </body>
 </html>
