Fixed Timer and Time Out

--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -17,18 +17,13 @@
         </div>
         <div id="questionContainer"></div>
         <div id="answers"></div>
-        <form id="textboxForm">
-            <textarea id="textbox"></textarea>
-            <div id="buttons">
-                <button id="back">Go Back</button>
-                <button id="submit" type="submit">Submit</button>
-            </div>
-        </form>
-        <div class="timerBar" data-style="smooth">
-            <div></div>
+        <div id="timeBarContainer">
+            <div id="timeBar"></div>
         </div>
+        <div><button id="test">test?</button></div>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./prompt.js"></script>
+    
+    <script src="prompt.js"></script>
+    
 </body>
 </html>
