Fixed Timer and Time Out

--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -17,11 +17,13 @@
         </div>
         <div id="questionContainer"></div>
         <div id="answers"></div>
-        <div class="timerBar" data-style="smooth">
-            <div></div>
+        <div id="timeBarContainer">
+            <div id="timeBar"></div>
         </div>
+        <div><button id="test">test?</button></div>
     </div>
-    <script src="/socket.io/socket.io.js"></script>
+    
     <script src="prompt.js"></script>
+    
 </body>
 </html>
