--- a/SocketIOServer/public/profileCreation/profile_creation.html
+++ b/SocketIOServer/public/profileCreation/profile_creation.html
@@ -37,6 +37,7 @@
                     </div>
                 </div>
             </form>
+            <p id="errorMessage"></p>
             <button id="next">Next</button>
         </div>
         <div id="modal">
