--- a/SocketIOServer/public/profileCreation/profile_creation.html
+++ b/SocketIOServer/public/profileCreation/profile_creation.html
@@ -32,7 +32,7 @@
                     <div id="profileForm">
                         <form id="userName">
                             <label for="name">Name</label><br>
-                            <input type="text" id="name" name="name" placeholder="Name">
+                            <input type="text" id="name" name="name" maxlength="10" placeholder="Name">
                         </form>
                     </div>
                 </div>
