Added Defaults Images

--- a/SocketIOServer/public/profileCreation/profile_creation.html
+++ b/SocketIOServer/public/profileCreation/profile_creation.html
@@ -44,12 +44,15 @@
             <div id="modal-content">
                 <span id="close">&times;</span>
                 <h3>Select an Image</h3>
-                <p>images go here</p>
-                <button type="button" id="continueButton">Continue</button>
+                <img src="../Resources/yellow_player.png" id="yellow_player" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/blue_player.png" id="blue_player" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/orange_player.png" id="orange_player" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/pink_player.png" id="pink_player" style="width: 200px; height: 200px; cursor: pointer;">
             </div>
         </div>
+        
         <script src="/socket.io/socket.io.js"></script>
-        <script src="./profile_creation.js"></script>
+        <script type="module" src="./profile_creation.js"></script>
        
     </body>
 
