Add menu to all pages
Added a settings menu that could be opened by clicking the logo at the top right hand corner. The menu gives the user the options to join a new game and to go back to the home screen. Styling for the menu is located in ```shared.css``` and the functionality is in ```menu.js```. Styling was also adjusted to ensure that it displays correctly on mobile.

--- a/SocketIOServer/public/countdown/countdown.html
+++ b/SocketIOServer/public/countdown/countdown.html
@@ -12,6 +12,21 @@
 
 
 <body>
+    <!--    MENU    -->
+    <button id="menu">
+        <img src="../Resources/rcos-square-red.png" alt="Square RC:OS logo.">
+    </button>
+    <div id="settings" style="display: none;">
+        <div>
+            <button id="settingsClose" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <h3>Settings</h3>
+            <button class="option" id="newGame">Join New Game</button>
+            <button class="option" id="homeScreen">Go Back to Home</button>
+        </div>
+    </div>
+
     <div id="container">
         <h1 style="line-height: 0.7">3</h1>
         <img src="../Resources/heart-outline.png" alt="A red heart">
@@ -20,5 +35,6 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="countdown.js"></script>
+    <script src="../menu.js"></script>
 </body>
 </html>
