--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -10,6 +10,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!--    MENU    -->
+        <button id="menu">
+            <img src="./Resources/rcos-square-red.png" alt="Square RC:OS logo.">
+        </button>
+        <div id="settings" style="display: none;">
+            <div>
+                <button id="settingsClose" type="button">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3>Settings</h3>
+                <button class="option" id="newGame">Join New Game</button>
+                <button class="option" id="homeScreen">Go Back to Home</button>
+            </div>
+        </div>
+
         <div id="container">
             <img id="rightHearts" alt="Three hearts as decoration" src="./Resources/hearts.png"/>
             <div>
@@ -19,6 +34,7 @@
             </div>
             <img id="leftHearts" alt="Three hearts as decoration" src="./Resources/hearts.png"/>
         </div>
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="../node_modules/socket.io/client-dist/socket.io.js"></script>
+        <script src="menu.js"></script>
     </body>
 </html>
