--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -10,10 +10,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!--    MENU    -->
+    <button id="menu">
+        <img src="../Resources/rcos-square-red.png" alt="Square RC:OS logo.">
+    </button>
+    <div id="settings" style="display: none;">
+        <div>
+            <button id="settingsClose" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <h3>Settings</h3>
+            <button class="option" id="newGame">Join New Game</button>
+            <button class="option" id="homeScreen">Go Back to Home</button>
+        </div>
+    </div>
+
     <div id="container">
         <div id="header">
             <p id="timer"></p>
-            <img id="profilePic" src="../Resources/user-icon.png" alt="Your profile picture." height="75px">
+<!--            <img id="profilePic" src="../Resources/user-icon.png" alt="Your profile picture." height="75px">-->
         </div>
         <div id="questionContainer"></div>
         <div id="answers"></div>
@@ -30,5 +46,6 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="./prompt.js"></script>
+    <script src="../menu.js"></script>
 </body>
 </html>
