--- a/SocketIOServer/public/waitingGraph/waitingGraph.html
+++ b/SocketIOServer/public/waitingGraph/waitingGraph.html
@@ -5,20 +5,39 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" type="text/css" href="../shared.css">
     <link rel="stylesheet" type="text/css" href="./waitingGraph.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<div id="container">
-    <div>
-        <div style="display: flex; justify-content: center;">
-            <img src="../Resources/heart-filled.png" alt="A red heart">
-            <img src="../Resources/heart-filled.png" alt="A red heart">
-            <img src="../Resources/heart-filled.png" alt="A red heart">
+    <!--    MENU    -->
+    <button id="menu">
+        <img src="../Resources/rcos-square-red.png" alt="Square RC:OS logo.">
+    </button>
+    <div id="settings" style="display: none;">
+        <div>
+            <button id="settingsClose" type="button">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <h3>Settings</h3>
+            <button class="option" id="newGame">Join New Game</button>
+            <button class="option" id="homeScreen">Go Back to Home</button>
         </div>
     </div>
-</div>
+
+    <div id="container">
+        <div>
+            <div style="display: flex; justify-content: center;">
+                <img src="../Resources/heart-filled.png" alt="A red heart">
+                <img src="../Resources/heart-filled.png" alt="A red heart">
+                <img src="../Resources/heart-filled.png" alt="A red heart">
+            </div>
+        </div>
+    </div>
 
 
 <script src="waitingGraph.js"></script>
+<script src="../menu.js"></script>
 </body>
 </html>
