Add styling for error messages
Added styling for error messages on profile creation page and lobby code page.

--- a/SocketIOServer/public/lobbyCode/index.html
+++ b/SocketIOServer/public/lobbyCode/index.html
@@ -17,6 +17,7 @@
         <div>
             <h1>Game Code</h1>
             <h3>Please enter your game code</h3>
+            <p id="response"></p>
             <div>
                 <form id="codeForm">
                     <div id="codeGroup">
