fixing socket.io

--- a/SocketIOServer/public/lobbyCode/index.html
+++ b/SocketIOServer/public/lobbyCode/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <script src="../../node_modules/socket.io/client-dist/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="./index.js"></script>
     <script src="../menu.js"></script>
 </body>
