--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -34,7 +34,7 @@
             </div>
             <img id="leftHearts" alt="Three hearts as decoration" src="./Resources/hearts.png"/>
         </div>
-        <script src="../node_modules/socket.io/client-dist/socket.io.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
         <script src="menu.js"></script>
     </body>
 </html>
