--- a/SocketIOServer/public/postGame/postGame.html
+++ b/SocketIOServer/public/postGame/postGame.html
@@ -35,6 +35,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <script src="postGame.js"></script>
     <script src="../menu.js"></script>
 
