Fix with proper styling practices
Followed the styling practices described in the document.

--- a/SocketIOServer/public/countdown/countdown.html
+++ b/SocketIOServer/public/countdown/countdown.html
@@ -1,3 +1,6 @@
+<!--AUTHOR: Amanda (ruana2@rpi.edu)-->
+<!--DESC: Web layout for the Countdown page, which displays a countdown from 3 and then starts the game.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,8 +30,9 @@
         </div>
     </div>
 
+    <!--  REST OF THE PAGE  -->
     <div id="container">
-        <h1 style="line-height: 0.7">3</h1>
+        <h1 id="number">3</h1>
         <img src="../Resources/heart-outline.png" alt="A red heart">
         <img src="../Resources/heart-outline.png" alt="A red heart">
         <img src="../Resources/heart-outline.png" alt="A red heart">
