--- a/SocketIOServer/public/index.html
+++ b/SocketIOServer/public/index.html
@@ -1,3 +1,6 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout of the Home page with the name and logo of the product. -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
