--- a/SocketIOServer/public/lobby/lobby.html
+++ b/SocketIOServer/public/lobby/lobby.html
@@ -1,3 +1,6 @@
+<!--AUTHOR: Amanda (ruana2@rpi.edu)-->
+<!--DESC: Web layout for the Lobby page, which displays all the players that have joined the game.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +28,7 @@
         </div>
     </div>
 
+    <!--    REST OF THE PAGE    -->
     <div id="container">
         <h1>Lobby</h1>
         <div id="scrollContainer">
