--- a/SocketIOServer/public/lobbyCode/index.html
+++ b/SocketIOServer/public/lobbyCode/index.html
@@ -1,3 +1,6 @@
+<!--AUTHOR: Amanda (ruana2@rpi.edu)-->
+<!--DESC: Web layout for the Lobby Code page, where the user could input a code.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
