--- a/SocketIOServer/public/postGame/postGame.html
+++ b/SocketIOServer/public/postGame/postGame.html
@@ -1,3 +1,6 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout for the Post Game page, where the user sees their ranking and could rejoin the game. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
