--- a/SocketIOServer/public/profileCreation/profile_creation.html
+++ b/SocketIOServer/public/profileCreation/profile_creation.html
@@ -1,3 +1,7 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) and Nneoma (anaemn@rpi.edu) -->
+<!-- DESC: Web layout of the Profile Creation page, where users can choose/upload their
+           profile picture and choose a name. -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -59,10 +63,10 @@
             <div id="modal-content">
                 <span id="close">&times;</span>
                 <h3>Select an Image</h3>
-                <img src="../Resources/yellow_player.png" id="yellow_player" style="width: 200px; height: 200px; cursor: pointer;">
-                <img src="../Resources/blue_player.png" id="blue_player" style="width: 200px; height: 200px; cursor: pointer;">
-                <img src="../Resources/orange_player.png" id="orange_player" style="width: 200px; height: 200px; cursor: pointer;">
-                <img src="../Resources/pink_player.png" id="pink_player" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/yellow_player.png" id="yellowPlayer" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/blue_player.png" id="bluePlayer" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/orange_player.png" id="orangePlayer" style="width: 200px; height: 200px; cursor: pointer;">
+                <img src="../Resources/pink_player.png" id="pinkPlayer" style="width: 200px; height: 200px; cursor: pointer;">
             </div>
         </div>
 
