--- a/SocketIOServer/public/voting/voting.html
+++ b/SocketIOServer/public/voting/voting.html
@@ -1,3 +1,7 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout of the Voting page, which consists of the presenter's name
+           and two voting buttons. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
