--- a/SocketIOServer/public/waitingForPlayers/waiting.html
+++ b/SocketIOServer/public/waitingForPlayers/waiting.html
@@ -1,3 +1,6 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout for the Waiting page consisting of a heart animation. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
