--- a/SocketIOServer/public/presenting/presenting.html
+++ b/SocketIOServer/public/presenting/presenting.html
@@ -1,3 +1,6 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout of the Presenting page, has a button for the user to proceed in their presentation.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
