--- a/SocketIOServer/public/prompt/prompt.html
+++ b/SocketIOServer/public/prompt/prompt.html
@@ -1,3 +1,6 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout for the Prompt page, displaying the prompt, answers, and timer. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
