--- a/SocketIOServer/public/waitingGraph/waitingGraph.html
+++ b/SocketIOServer/public/waitingGraph/waitingGraph.html
@@ -1,3 +1,6 @@
+<!-- AUTHOR: Amanda (ruana2@rpi.edu) -->
+<!-- DESC: Web layout for the Waiting page, displays a heart jumping animation. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
